--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 server.port=1050
+server.servlet.session.cookie.same-site=none
+server.servlet.session.cookie.http-only=false
+server.servlet.session.cookie.secure=true
+
+
+
+
+
 
