--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=1050
-server.servlet.session.cookie.same-site=strict
-server.servlet.session.cookie.http-only=false
-server.servlet.session.cookie.secure=false
+server.servlet.session.cookie.same-site=none
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.secure=true
 
 
 
